k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec: #configure this Deployment
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432  #default port for postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data  #default location where postgres stores data. Now this location will be mounted to volumne shown above.
              subPath: postgres  # Means any data stored inside mountPath is going to be stored inside folder postgres inside actual persistentVolumeClaim
