k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000  #Port other objects can use to access this POD. In other words, port 3000 on service and port 3000(shown below) in container
      targetPort: 3000  #Port inside client container. There is no nodePort in ClusterIP as it is not accessible from outside world.
