k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379  #Port other objects can use to access this POD. In other words, port 3000 on service and port 3000(shown below) in container
      targetPort: 6379  #Port inside server container. There is no nodePort in ClusterIP as it is not accessible from outside world.
